--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.2",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.28.0",
