--- a/db/config/config.json
+++ b/db/config/config.json
@@ -5,7 +5,8 @@
   },
   "test": {
     "storage": "./triage.sqlite",
-    "dialect": "sqlite"
+    "dialect": "sqlite",
+    "logging": false
   },
   "testorig": {
     "username": "postgres",
