--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.2",
+    "sequelize-values": "^1.1.0",
     "socket.io": "^4.1.2",
     "uuid": "^8.3.2"
   },
