--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "mood",
   "version": "0.0.0",
   "private": true,
+  "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node .",
     "dev": "nodemon app.js"
   },
   "dependencies": {
