redesign Answer and PlayerAnswer tables\n\nAlso handed over of password encryption to User model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,12 @@
             "driver": "SQLite",
             "database": "${workspaceFolder:mood}/db/database.sqlite",
             "name": "dbsqlite"
+        },
+        {
+            "previewLimit": 50,
+            "driver": "SQLite",
+            "database": "${workspaceFolder:mood}/triage.sqlite",
+            "name": "triage wsl"
         }
     ]
 }
