minor update on db model

--- a/db/config/config.json
+++ b/db/config/config.json
@@ -4,7 +4,7 @@
     "dialect": "sqlite"
   },
   "test": {
-    "storage": "./triage.sqlite",
+    "storage": "./db/database2.sqlite",
     "dialect": "sqlite",
     "logging": false
   },
