add cascade delete queries

--- a/db/config/config.json
+++ b/db/config/config.json
@@ -5,8 +5,7 @@
   },
   "test": {
     "storage": "./db/database2.sqlite",
-    "dialect": "sqlite",
-    "logging": false
+    "dialect": "sqlite"
   },
   "testorig": {
     "username": "postgres",
