--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,10 @@ bower_components
 build/Release
 
 # uploads directory
-uploads
+uploads/*.png
+uploads/*.jpg
+uploads/*.jpeg
+uploads/*.bmp
 
 # Dependency directories
 node_modules/
