--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,11 @@ bower_components
 build/Release
 
 # uploads directory
-public/uploads
+uploads/*.png
+uploads/*.jpg
+uploads/*.jpeg
+uploads/*.bmp
+
 
 # Dependency directories
 node_modules/
