--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "main": "app.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "start": "NODE_ENV=development node . --trace-warnings",
+    "start": "NODE_ENV=production node . --trace-warnings",
     "dev": "nodemon app.js"
   },
   "dependencies": {
