--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "NODE_ENV=production node . --trace-warnings",
+    "start": "node app.js",
     "dev": "nodemon app.js"
   },
   "dependencies": {
